--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,8 @@
     </div>
 
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
-
+    
+    <script src="config.js"></script>
     <script src="auth.js"></script>
     <script src="dashboard.js"></script>
     <script src="pwa-installer.js"></script>
