--- a/lunas.html
+++ b/lunas.html
@@ -90,7 +90,8 @@
     </div>
 
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
-
+    
+    <script src="config.js"></script>
     <script src="auth.js"></script>
     <script src="lunas.js"></script>
     <script src="pwa-installer.js"></script>
