--- a/pelanggan.html
+++ b/pelanggan.html
@@ -157,7 +157,8 @@
     </div>
 
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
-
+    
+    <script src="config.js"></script>
     <script src="auth.js"></script>
     <script src="pelanggan.js"></script>
     <script src="pwa-installer.js"></script>
