--- a/tagihan.html
+++ b/tagihan.html
@@ -127,7 +127,8 @@
     </div>
 
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
-
+    
+    <script src="config.js"></script>
     <script src="auth.js?v=2.0"></script>
     <script src="tagihan.js?v=2.0"></script>
     <script src="pwa-installer.js?v=2.0"></script>
