--- a/tagihan.html
+++ b/tagihan.html
@@ -128,7 +128,7 @@
 
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
-    <script src="config.js"></script>
+    <script src="config.js?v=2.0"></script>
     <script src="auth.js?v=2.0"></script>
     <script src="tagihan.js?v=2.0"></script>
     <script src="pwa-installer.js?v=2.0"></script>
