--- a/pelanggan.html
+++ b/pelanggan.html
@@ -109,6 +109,7 @@
                     <div class="form-group"><label for="tagihan">Tagihan</label><input type="text" id="tagihan" readonly></div>
                     <div class="form-group"><label for="status">Status</label><select id="status"><option value="AKTIF">AKTIF</option><option value="NONAKTIF">NONAKTIF</option></select></div>
                     <div class="form-group"><label for="jenisPerangkat">Jenis Perangkat</label><input type="text" id="jenisPerangkat"></div>
+                    <div class="form-group"><label for="ipStatic">IP STATIC / PPOE</label><input type="text" id="ipStatic" placeholder="Contoh: 192.168.1.100 atau PPOE"></div>
                 </div>
                 <button type="submit" class="btn btn-primary btn-full">Simpan</button>
             </form>
