--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -35,10 +35,10 @@
                 <li><a href="pelanggan.html"><i class="fas fa-users"></i> Pelanggan</a></li>
                 <li><a href="tagihan.html"><i class="fas fa-file-invoice"></i> Tagihan</a></li>
                 <li><a href="lunas.html"><i class="fas fa-check-circle"></i> Lunas</a></li>
-                <li><a href="pengeluaran.html" class="active"><i class="fas fa-sign-out-alt"></i> Pengeluaran</a></li>
+                <li><a href="pengeluaran.html" class="active"><i class="fas fa-money-bill-wave"></i> Pengeluaran</a></li>
             </ul>
         </nav>
-        <div class="logout"><a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></div>
+        <div class="logout"><a href="#" id="logout-btn"><i class="fas fa-power-off"></i> Logout</a></div>
     </div>
 
     <!-- Konten Utama Halaman -->
@@ -47,7 +47,7 @@
             <button class="hamburger-btn" id="hamburger-btn">
                 <i class="fas fa-bars"></i>
             </button>
-            <h2><i class="fas fa-sign-out-alt"></i>Pengeluaran</h2>
+            <h2><i class="fas fa-money-bill-wave"></i>Pengeluaran</h2>
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari pengeluaran...">
                 <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus"></i> Tambah</button>
