revisi dashboard pelanggan

--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -47,7 +47,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="welcome-section">
-                <h2><i class="fas fa-user-circle"></i> Selamat Datang, <span id="nama-pelanggan">Loading...</span>!</h2>
+                <h2><i class="fas fa-user-circle"></i> Selamat Datang, <span id="nama-pelanggan"></span><span id="welcome-suffix" style="display: none;">!</span></h2>
                 <p class="welcome-subtitle">Berikut adalah informasi akun dan tagihan Anda</p>
             </div>
         </header>
