--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -49,7 +49,8 @@
                 <i class="fas fa-bars"></i>
             </button>
             <div class="welcome-section">
-                <h2><i class="fas fa-user-circle"></i> Welcome,<span id="nama-pelanggan"></span><span id="welcome-suffix" style="display: none;">!</span></h2>
+                <!-- <h2><i class="fas fa-user-circle"></i> Welcome,<span id="nama-pelanggan"></span><span id="welcome-suffix" style="display: none;">!</span></h2> -->
+                <h2><i class="fas fa-user-circle"></i> Welcome, <span id="nama-pelanggan"></span>!</h2>
                 <p class="welcome-subtitle">Berikut adalah informasi akun dan tagihan Anda</p>
             </div>
         </header>
