--- a/dashboard.html
+++ b/dashboard.html
@@ -55,6 +55,8 @@
             <div class="filter-container">
                 <select id="filter-bulan"></select>
                 <select id="filter-tahun"></select>
+                <!-- Debug button for testing -->
+                <button onclick="window.debugDashboard && window.debugDashboard()" style="margin-left: 10px; padding: 5px 10px; background-color: #dc3545; color: white; border: none; border-radius: 4px; font-size: 12px;">🔧 Test Data</button>
             </div>
         </header>
         <main>
