--- a/dashboard.html
+++ b/dashboard.html
@@ -51,7 +51,7 @@
                 <i class="fas fa-bars"></i>
             </button>
             <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
-            <!-- KONTROL FILTER BARU -->
+            <!-- Kontrol Filter -->
             <div class="filter-container">
                 <select id="filter-bulan"></select>
                 <select id="filter-tahun"></select>
