--- a/dashboard.html
+++ b/dashboard.html
@@ -47,14 +47,19 @@
     <!-- Konten Utama -->
     <div class="main-content">
         <header>
-            <button class="hamburger-btn" id="hamburger-btn">
-                <i class="fas fa-bars"></i>
-            </button>
-            <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
-            <!-- Kontrol Filter -->
-            <div class="filter-container">
-                <select id="filter-bulan"></select>
-                <select id="filter-tahun"></select>
+            <div class="header-left">
+                <button class="hamburger-btn" id="hamburger-btn">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
+            </div>
+            <div class="header-actions">
+                <!-- Kontrol Filter -->
+                <div class="filter-container">
+                    <select id="filter-bulan"></select>
+                    <select id="filter-tahun"></select>
+                </div>
+                <!-- Theme toggle will be inserted here by theme-manager.js -->
             </div>
         </header>
         <main>
@@ -67,6 +72,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
     <script src="config.js"></script>
+    <script src="theme-manager.js"></script>
     <script src="auth.js"></script>
     <script src="dashboard.js"></script>
     <script src="pwa-installer.js"></script>
