--- a/lunas.html
+++ b/lunas.html
@@ -92,6 +92,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
     <script src="config.js"></script>
+    <script src="theme-manager.js"></script>
     <script src="auth.js"></script>
     <script src="lunas.js"></script>
     <script src="pwa-installer.js"></script>
