--- a/pelanggan.html
+++ b/pelanggan.html
@@ -160,6 +160,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
     <script src="config.js"></script>
+    <script src="theme-manager.js"></script>
     <script src="auth.js"></script>
     <script src="pelanggan.js"></script>
     <script src="pwa-installer.js"></script>
