--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -35,6 +35,7 @@
                 <li><a href="pelanggan_dashboard.html" class="active"><i class="fas fa-user-circle"></i> Dashboard Saya</a></li>
                 <li><a href="pelanggan_riwayat_lunas.html"><i class="fas fa-history"></i> Riwayat Lunas</a></li>
                 <li><a href="pelanggan_profile.html"><i class="fas fa-user-edit"></i> Profile Saya</a></li>
+                <li><a href="pelanggan_info.html"><i class="fas fa-info-circle"></i> Info Pembayaran</a></li>
             </ul>
         </nav>
         <div class="logout">
@@ -63,6 +64,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
     <script src="config.js"></script>
+    <script src="theme-manager.js"></script>
     <script src="auth.js"></script>
     <script src="pelanggan_dashboard.js"></script>
     <script src="pwa-installer.js"></script>
