--- a/tagihan.html
+++ b/tagihan.html
@@ -129,6 +129,7 @@
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
     
     <script src="config.js?v=2.0"></script>
+    <script src="theme-manager.js"></script>
     <script src="auth.js?v=2.0"></script>
     <script src="tagihan.js?v=2.0"></script>
     <script src="pwa-installer.js?v=2.0"></script>
