--- a/pelanggan.html
+++ b/pelanggan.html
@@ -161,6 +161,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pelanggan.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
