--- a/pelanggan_riwayat_lunas.html
+++ b/pelanggan_riwayat_lunas.html
@@ -91,6 +91,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pelanggan_riwayat_lunas.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
