--- a/dashboard.html
+++ b/dashboard.html
@@ -68,6 +68,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="dashboard.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
