--- a/lunas.html
+++ b/lunas.html
@@ -93,6 +93,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="lunas.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
