--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -65,6 +65,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pelanggan_dashboard.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
