--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -264,6 +264,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pelanggan_info.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
