--- a/pelanggan_profile.html
+++ b/pelanggan_profile.html
@@ -133,6 +133,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pelanggan_profile.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
