--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -115,6 +115,7 @@
     
     <script src="config.js"></script>
     <script src="auth.js"></script>
+    <script src="logo-navigation.js"></script>
     <script src="pengeluaran.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
