--- a/tagihan.html
+++ b/tagihan.html
@@ -130,6 +130,7 @@
     
     <script src="config.js?v=2.0"></script>
     <script src="auth.js?v=2.0"></script>
+    <script src="logo-navigation.js?v=2.0"></script>
     <script src="tagihan.js?v=2.0"></script>
     <script src="pwa-installer.js?v=2.0"></script>
 </body>
