--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 </head>
 <body class="login-page">
     <div class="login-box">
+        <div class="login-image">
+            <img src="assets/gambar_login.svg" alt="Selinggonet Login" class="login-img">
+        </div>
         <h2>Selamat Datang</h2>
         <p>Silakan masuk untuk melanjutkan</p>
         <form id="login-form">
