--- a/dashboard.html
+++ b/dashboard.html
@@ -50,7 +50,13 @@
             <button class="hamburger-btn" id="hamburger-btn">
                 <i class="fas fa-bars"></i>
             </button>
-            <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
+            <div class="header-left">
+                <h2><i class="fas fa-tachometer-alt"></i> Dashboard</h2>
+                <div class="datetime-display">
+                    <i class="fas fa-clock"></i>
+                    <span id="current-datetime"></span>
+                </div>
+            </div>
             <!-- Kontrol Filter -->
             <div class="filter-container">
                 <select id="filter-bulan"></select>
@@ -69,6 +75,7 @@
     <script src="config.js"></script>
     <script src="auth.js"></script>
     <script src="logo-navigation.js"></script>
+    <script src="datetime-display.js"></script>
     <script src="dashboard.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
