--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -52,6 +52,10 @@
             <div class="welcome-section">
                 <h2><i class="fas fa-user-circle"></i> Welcome,<span id="nama-pelanggan"></span><span id="welcome-suffix" style="display: none;">!</span></h2>
                 <p class="welcome-subtitle">Berikut adalah informasi akun dan tagihan Anda</p>
+                <div class="datetime-display">
+                    <i class="fas fa-clock"></i>
+                    <span id="current-datetime"></span>
+                </div>
             </div>
         </header>
         <main>
@@ -66,6 +70,7 @@
     <script src="config.js"></script>
     <script src="auth.js"></script>
     <script src="logo-navigation.js"></script>
+    <script src="datetime-display.js"></script>
     <script src="pelanggan_dashboard.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
