tambah illustration lagi

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="login-page">
     <div class="login-box">
         <div class="login-illustration">
-            <img src="assets/login_illustration.svg" alt="Login Illustration" class="illustration-image">
+            <img src="assets/login.svg" alt="Login Illustration" class="illustration-image">
         </div>
         <h2>Selamat Datang</h2>
         <p>Silakan masuk untuk melanjutkan</p>
