--- a/tagihan.html
+++ b/tagihan.html
@@ -27,7 +27,7 @@
     <!-- Sidebar (Sama seperti halaman lain) -->
     <div class="sidebar" id="sidebar">
         <div class="logo">
-            <img src="assets/selinggonet.png" alt="Selinggonet Logo" class="logo-image">
+            <img src="assets/logo_512x512.png" alt="Selinggonet Logo" class="logo-image">
             <span>Selinggonet</span></div>
         <nav>
             <ul>
