--- a/tagihan.html
+++ b/tagihan.html
@@ -51,6 +51,9 @@
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari tagihan...">
                 <button id="create-invoices-btn" class="btn btn-primary"><i class="fas fa-plus-circle"></i> Buat Tagihan</button>
+                <a href="dashboard.html" class="btn" style="background-color: var(--secondary-color); color: white;">
+                    <i class="fas fa-arrow-left"></i> Kembali
+                </a>
             </div>
         </header>
         <main>
