--- a/lunas.html
+++ b/lunas.html
@@ -53,6 +53,9 @@
             <h2><i class="fas fa-history"></i> Riwayat Lunas</h2>
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari riwayat...">
+                <a href="dashboard.html" class="btn" style="background-color: var(--secondary-color); color: white;">
+                    <i class="fas fa-arrow-left"></i> Kembali
+                </a>
             </div>
         </header>
         <main>
