--- a/pelanggan.html
+++ b/pelanggan.html
@@ -49,6 +49,9 @@
             </button>
             <h2><i class="fas fa-users"></i> Data Pelanggan</h2>
             <div class="header-actions">
+                <a href="dashboard.html" class="btn" style="background-color: var(--secondary-color); color: white;">
+                <i class="fas fa-arrow-left"></i> Kembali
+                </a>
                 <input type="text" id="search-input" placeholder="Cari pelanggan...">
                 <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus"></i> Tambah</button>
             </div>
