--- a/tagihan.html
+++ b/tagihan.html
@@ -50,10 +50,7 @@
             <h2><i class="fas fa-file-invoice-dollar"></i> Manajemen Tagihan</h2>
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari tagihan...">
-                <button id="create-invoices-btn" class="btn btn-primary"><i class="fas fa-plus-circle"></i> Buat Tagihan</button>
-<!--                 <a href="dashboard.html" class="btn" style="background-color: var(--secondary-color); color: white;">
-                    <i class="fas fa-arrow-left"></i> Kembali
-                </a> -->
+                <button id="create-invoices-btn" class="btn btn-primary"><i class="fas fa-plus-circle"></i> Tagihan</button>
             </div>
         </header>
         <main>
