--- a/pelanggan.html
+++ b/pelanggan.html
@@ -50,7 +50,7 @@
             <h2><i class="fas fa-users"></i> Data Pelanggan</h2>
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari pelanggan...">
-                <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus"></i> Tambah</button>
+                <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus-circle"></i> Pelanggan</button>
             </div>
         </header>
         <main>
