--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -50,7 +50,7 @@
             <h2><i class="fas fa-money-bill-wave"></i>Pengeluaran</h2>
             <div class="header-actions">
                 <input type="text" id="search-input" placeholder="Cari pengeluaran...">
-                <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus"></i> Tambah</button>
+                <button id="show-add-modal-btn" class="btn btn-primary"><i class="fas fa-plus-circle"></i> Pengeluaran</button>
             </div>
         </header>
         <main>
