--- a/dashboard.html
+++ b/dashboard.html
@@ -92,28 +92,27 @@
             <div class="text-[#625095] flex h-8 items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"></path></svg>
             </div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Customers</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Pelanggan</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="tagihan.html">
             <div class="text-[#625095] flex h-8 items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M72,104a8,8,0,0,1,8-8h96a8,8,0,0,1,0,16H80A8,8,0,0,1,72,104Zm8,40h96a8,8,0,0,0,0-16H80a8,8,0,0,0,0,16ZM232,56V208a8,8,0,0,1-11.58,7.15L192,200.94l-28.42,14.21a8,8,0,0,1-7.16,0L128,200.94,99.58,215.15a8,8,0,0,1-7.16,0L64,200.94,35.58,215.15A8,8,0,0,1,24,208V56A16,16,0,0,1,40,40H216A16,16,0,0,1,232,56Zm-16,0H40V195.06l20.42-10.22a8,8,0,0,1,7.16,0L96,199.06l28.42-14.22a8,8,0,0,1,7.16,0L160,199.06l28.42-14.22a8,8,0,0,1,7.16,0L216,195.06Z"></path></svg>
             </div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Invoices</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Tagihan</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pengeluaran.html">
             <div class="text-[#625095] flex h-8 items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M152,120H136V56h8a32,32,0,0,1,32,32,8,8,0,0,0,16,0,48.05,48.05,0,0,0-48-48h-8V24a8,8,0,0,0-16,0V40h-8a48,48,0,0,0,0,96h8v64H104a32,32,0,0,1-32-32,8,8,0,0,0-16,0,48.05,48.05,0,0,0,48,48h16v16a8,8,0,0,0,16,0V216h16a48,48,0,0,0,0-96Zm-40,0a32,32,0,0,1,0-64h8v64Zm40,80H136V136h16a32,32,0,0,1,0,64Z"></path></svg>
             </div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Expenses</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Pengeluaran</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="profile.html">
             <div class="text-[#625095] flex h-8 items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"></path></svg>
             </div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Profil</p>
           </a>
         </div>
-        <div class="h-5 bg-[#f9f8fb]"></div>
       </footer>
     </div>
 
