--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
                         <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
                     </svg>
                 </div>
-                <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Profile</h2>
+                <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Profil</h2>
             </div>
 
             <div class="flex p-4 @container">
@@ -52,22 +52,21 @@
                 </a>
                 <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"></path></svg></div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Customers</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Pelanggan</p>
                 </a>
-                <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="tagihan.html">
-                    <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M213.66,82.34l-56-56A8,8,0,0,0,152,24H56A16,16,0,0,0,40,40V216a16,16,0,0,0,16,16H200a16,16,0,0,0,16-16V88A8,8,0,0,0,213.66,82.34ZM160,51.31,188.69,80H160ZM200,216H56V40h88V88a8,8,0,0,0,8,8h48V216Z"></path></svg></div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Invoices</p>
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="tagihan.html">
+                   <div class="text-[#110e1b] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M216,40H40A16,16,0,0,0,24,56V208a8,8,0,0,0,11.58,7.15L64,200.94l28.42,14.21a8,8,0,0,0,7.16,0L128,200.94l28.42,14.21a8,8,0,0,0,7.16,0L192,200.94l28.42,14.21A8,8,0,0,0,232,208V56A16,16,0,0,0,216,40ZM176,144H80a8,8,0,0,1,0-16h96a8,8,0,0,1,0,16Zm0-32H80a8,8,0,0,1,0-16h96a8,8,0,0,1,0,16Z"></path></svg></div>
+                   <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Tagihan</p>
                 </a>
                 <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pengeluaran.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M152,120H136V56h8a32,32,0,0,1,32,32,8,8,0,0,0,16,0,48.05,48.05,0,0,0-48-48h-8V24a8,8,0,0,0-16,0V40h-8a48,48,0,0,0,0,96h8v64H104a32,32,0,0,1-32-32,8,8,0,0,0-16,0,48.05,48.05,0,0,0,48,48h16v16a8,8,0,0,0,16,0V216h16a48,48,0,0,0,0-96Zm-40,0a32,32,0,0,1,0-64h8v64Zm40,80H136V136h16a32,32,0,0,1,0,64Z"></path></svg></div>
-                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Expenses</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Pengeluaran</p>
                 </a>
                 <a class="just flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="profile.html">
                     <div class="text-[#110e1b] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M230.93,220a8,8,0,0,1-6.93,4H32a8,8,0,0,1-6.92-12c15.23-26.33,38.7-45.21,66.09-54.16a72,72,0,1,1,73.66,0c27.39,8.95,50.86,27.83,66.09,54.16A8,8,0,0,1,230.93,220Z"></path></svg></div>
-                    <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
+                    <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Profil</p>
                 </a>
             </div>
-            <div class="h-5 bg-[#f9f8fb]"></div>
         </div>
     </div>
 
