--- a/tagihan.html
+++ b/tagihan.html
@@ -68,7 +68,7 @@
               </div>
               <input
                 id="search-input"
-                placeholder="Search invoices"
+                placeholder="Cari tagihan"
                 class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] focus:border-none h-full placeholder:text-[#625095] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                 value=""
               />
@@ -94,7 +94,7 @@
         <div class="flex gap-2 px-4 pb-3 pt-2">
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="dashboard.html">
             <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M218.83,103.77l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208a16,16,0,0,0,16,16H96a16,16,0,0,0,16-16V160h32v48a16,16,0,0,0,16,16h48a16,16,0,0,0,16-16V115.55A16,16,0,0,0,218.83,103.77ZM208,208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48V115.55l.11-.1L128,40l79.9,75.43.11.1Z"></path></svg></div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Dashboard</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Dasbor</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan.html">
             <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M117.25,157.92a60,60,0,1,0-66.5,0A95.83,95.83,0,0,0,3.53,195.63a8,8,0,1,0,13.4,8.74,80,80,0,0,1,134.14,0,8,8,0,0,0,13.4-8.74A95.83,95.83,0,0,0,117.25,157.92ZM40,108a44,44,0,1,1,44,44A44.05,44.05,0,0,1,40,108Zm210.14,98.7a8,8,0,0,1-11.07-2.33A79.83,79.83,0,0,0,172,168a8,8,0,0,1,0-16,44,44,0,1,0-16.34-84.87,8,8,0,1,1-5.94-14.85,60,60,0,0,1,55.53,105.64,95.83,95.83,0,0,1,47.22,37.71A8,8,0,0,1,250.14,206.7Z"></path></svg></div>
