--- a/dashboard.html
+++ b/dashboard.html
@@ -56,7 +56,7 @@
       <!-- Main Content with bottom padding for fixed navigation -->
       <div class="flex-1 pb-20">
         <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
-          <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Dashboard</h2>
+          <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Dasbor</h2>
         </header>
         
         <!-- Filters -->
@@ -86,7 +86,7 @@
             <div class="text-[#110e1b] flex h-8 items-center justify-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M224,115.55V208a16,16,0,0,1-16,16H168a16,16,0,0,1-16-16V168a8,8,0,0,0-8-8H112a8,8,0,0,0-8,8v40a16,16,0,0,1-16,16H48a16,16,0,0,1-16-16V115.55a16,16,0,0,1,5.17-11.78l80-75.48.11-.11a16,16,0,0,1,21.53,0,1.14,1.14,0,0,0,.11.11l80,75.48A16,16,0,0,1,224,115.55Z"></path></svg>
             </div>
-            <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Dashboard</p>
+            <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Dasbor</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan.html">
             <div class="text-[#625095] flex h-8 items-center justify-center">
