--- a/pelanggan.html
+++ b/pelanggan.html
@@ -49,7 +49,7 @@
               </div>
               <input
                 id="search-input"
-                placeholder="Search customers..."
+                placeholder="Cari pelanggan..."
                 class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#110e1b] focus:outline-0 focus:ring-0 border-none bg-[#eae8f3] focus:border-none h-full placeholder:text-[#625095] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
               />
             </div>
@@ -59,13 +59,13 @@
         <!-- Status Filters -->
         <div class="flex gap-3 p-3 flex-wrap pr-4">
           <button id="filter-all" class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#eae8f3] pl-4 pr-4">
-            <p class="text-[#110e1b] text-sm font-medium leading-normal">All</p>
+            <p class="text-[#110e1b] text-sm font-medium leading-normal">Semua</p>
           </button>
           <button id="filter-active" class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#eae8f3] pl-4 pr-4">
-            <p class="text-[#110e1b] text-sm font-medium leading-normal">Active</p>
+            <p class="text-[#110e1b] text-sm font-medium leading-normal">Aktif</p>
           </button>
           <button id="filter-inactive" class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-full bg-[#eae8f3] pl-4 pr-4">
-            <p class="text-[#110e1b] text-sm font-medium leading-normal">Inactive</p>
+            <p class="text-[#110e1b] text-sm font-medium leading-normal">Tidak Aktif</p>
           </button>
         </div>
 
@@ -325,7 +325,7 @@
         <div class="flex gap-2 px-4 pb-3 pt-2">
           <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="dashboard.html">
             <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M218.83,103.77l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208a16,16,0,0,0,16,16H96a16,16,0,0,0,16-16V160h32v48a16,16,0,0,0,16,16h48a16,16,0,0,0,16-16V115.55A16,16,0,0,0,218.83,103.77ZM208,208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48V115.55l.11-.1L128,40l79.9,75.43.11.1Z"></path></svg></div>
-            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Dashboard</p>
+            <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Dasbor</p>
           </a>
           <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="pelanggan.html">
             <div class="text-[#110e1b] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M164.47,195.63a8,8,0,0,1-6.7,12.37H10.23a8,8,0,0,1-6.7-12.37,95.83,95.83,0,0,1,47.22-37.71,60,60,0,1,1,66.5,0A95.83,95.83,0,0,1,164.47,195.63Zm87.91-.15a95.87,95.87,0,0,0-47.13-37.56A60,60,0,0,0,144.7,54.59a4,4,0,0,0-1.33,6A75.83,75.83,0,0,1,147,150.53a4,4,0,0,0,1.07,5.53,112.32,112.32,0,0,1,29.85,30.83,23.92,23.92,0,0,1,3.65,16.47,4,4,0,0,0,3.95,4.64h60.3a8,8,0,0,0,7.73-5.93A8.22,8.22,0,0,0,252.38,195.48Z"></path></svg></div>
