--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,8 @@
                 </button>
             </div>
 
-            <div class="flex gap-2 border-t border-[#eae8f3] bg-[#f9f8fb] px-4 pb-3 pt-2">
+           <footer class="fixed bottom-0 left-0 right-0 z-50 bg-[#f9f8fb] border-t border-[#eae8f3]">
+            <div class="flex gap-2 px-4 pb-3 pt-2">
                 <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="dashboard.html">
                     <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M218.83,103.77l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208a16,16,0,0,0,16,16H96a16,16,0,0,0,16-16V160h32v48a16,16,0,0,0,16,16h48a16,16,0,0,0,16-16V115.55A16,16,0,0,0,218.83,103.77ZM208,208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48V115.55l.11-.1L128,40l79.9,75.43.11.1Z"></path></svg></div>
                     <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Dashboard</p>
@@ -67,6 +68,7 @@
                     <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Profil</p>
                 </a>
             </div>
+           </footer>
         </div>
     </div>
 
