--- a/pelanggan.html
+++ b/pelanggan.html
@@ -70,7 +70,7 @@
         </div>
 
         <!-- Customer List Container with proper scrolling -->
-        <div id="customer-list" class="flex-1 overflow-y-auto max-h-[calc(100vh-280px)] pb-32">
+        <div id="customer-list">
             <!-- Customer items will be dynamically inserted here -->
         </div>
         
