--- a/tagihan.html
+++ b/tagihan.html
@@ -35,7 +35,7 @@
       style='font-family: Manrope, "Noto Sans", sans-serif;'
     >
       <!-- Main Content with bottom padding for fixed navigation -->
-      <div class="flex-1 pb-20">
+      <div class="flex-1">
         <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
           <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Tagihan</h2>
         </header>
@@ -77,7 +77,7 @@
         </div>
         
         <!-- Invoice List Container with proper scrolling -->
-        <div id="invoice-list" class="flex-1 overflow-y-auto max-h-[calc(100vh-280px)] pb-32">
+        <div id="invoice-list">
           <!-- Invoices will be dynamically loaded here -->
         </div>
         
