--- a/dashboard.html
+++ b/dashboard.html
@@ -159,7 +159,7 @@
         <!-- Modern Header with gradient -->
         <header class="header-gradient shadow-lg">
           <div class="px-6 py-8">
-            <h2 class="text-white text-2xl font-bold leading-tight text-center mb-2">Dashboard</h2>
+            <h2 class="text-white text-2xl font-bold leading-tight text-center mb-2">Dasbor</h2>
             <p class="text-white/80 text-sm text-center">Selinggonet Management System</p>
           </div>
           
