--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,8 @@
     <style>
         /* Custom gradients and colors */
         .gradient-bg {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+/*             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+            background: linear-gradient(135deg, #2c2c2c 0%, #000000 100%);
         }
         
         .gradient-card-1 {
