--- a/dashboard.html
+++ b/dashboard.html
@@ -183,7 +183,7 @@
 
         <!-- Stats Cards Container with improved spacing -->
         <div class="px-6 py-6">
-          <div id="cards-container" class="stats-grid">
+          <div id="cards-container" class="grid grid-cols-2 gap-4">
               <!-- Cards will be dynamically inserted here by dashboard.js -->
           </div>
         </div>
