--- a/profile.html
+++ b/profile.html
@@ -63,9 +63,9 @@
                 <div class="text-[#625095] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M152,120H136V56h8a32,32,0,0,1,32,32,8,8,0,0,0,16,0,48.05,48.05,0,0,0-48-48h-8V24a8,8,0,0,0-16,0V40h-8a48,48,0,0,0,0,96h8v64H104a32,32,0,0,1-32-32,8,8,0,0,0-16,0,48.05,48.05,0,0,0,48,48h16v16a8,8,0,0,0,16,0V216h16a48,48,0,0,0,0-96Zm-40,0a32,32,0,0,1,0-64h8v64Zm40,80H136V136h16a32,32,0,0,1,0,64Z"></path></svg></div>
                 <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Pengeluaran</p>
             </a>
-            <a class="just flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="profile.html">
-                <div class="text-[#110e1b] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M230.93,220a8,8,0,0,1-6.93,4H32a8,8,0,0,1-6.92-12c15.23-26.33,38.7-45.21,66.09-54.16a72,72,0,1,1,73.66,0c27.39,8.95,50.86,27.83,66.09,54.16A8,8,0,0,1,230.93,220Z"></path></svg></div>
-                <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Profil</p>
+            <a class="just flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="profile.html">
+                <div class="text-[#5324e0] flex h-8 items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256"><path d="M230.93,220a8,8,0,0,1-6.93,4H32a8,8,0,0,1-6.92-12c15.23-26.33,38.7-45.21,66.09-54.16a72,72,0,1,1,73.66,0c27.39,8.95,50.86,27.83,66.09,54.16A8,8,0,0,1,230.93,220Z"></path></svg></div>
+                <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Profil</p>
             </a>
         </div>
     </footer>
