--- a/pelanggan_dashboard.html
+++ b/pelanggan_dashboard.html
@@ -38,13 +38,13 @@
         <!-- Fixed Bottom Navigation -->
         <footer class="fixed bottom-0 left-0 right-0 z-50 bg-[#f9f8fc] border-t border-[#eae7f3]">
             <div class="flex gap-2 px-4 pb-3 pt-2">
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="pelanggan_dashboard.html">
-                    <div class="text-[#110e1b] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="pelanggan_dashboard.html">
+                    <div class="text-[#5324e0] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M224,115.55V208a16,16,0,0,1-16,16H168a16,16,0,0,1-16-16V168a8,8,0,0,0-8-8H112a8,8,0,0,0-8,8v40a16,16,0,0,1-16,16H48a16,16,0,0,1-16-16V115.55a16,16,0,0,1,5.17-11.78l80-75.48.11-.11a16,16,0,0,1,21.53,0,1.14,1.14,0,0,0,.11.11l80,75.48A16,16,0,0,1,224,115.55Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
+                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
                 </a>
                 <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_riwayat_lunas.html">
                     <div class="text-[#604e97] flex h-8 items-center justify-center">
@@ -71,7 +71,6 @@
                     <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
                 </a>
             </div>
-            <div class="h-5 bg-[#f9f8fc]"></div>
         </footer>
     </div>
 
