--- a/pelanggan_riwayat_lunas.html
+++ b/pelanggan_riwayat_lunas.html
@@ -40,37 +40,37 @@
         <!-- Fixed Bottom Navigation -->
         <footer class="fixed bottom-0 left-0 right-0 z-50 bg-[#f9f8fc] border-t border-[#eae7f3]">
             <div class="flex gap-2 px-4 pb-3 pt-2">
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_dashboard.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_dashboard.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M218.83,103.77l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208a16,16,0,0,0,16,16H96a16,16,0,0,0,16-16V160h32v48a16,16,0,0,0,16,16h48a16,16,0,0,0,16-16V115.55A16,16,0,0,0,218.83,103.77ZM208,208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48V115.55l.11-.1L128,40l79.9,75.43.11.1Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#110e1b]" href="pelanggan_riwayat_lunas.html">
-                    <div class="text-[#110e1b] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 rounded-full text-[#5324e0]" href="pelanggan_riwayat_lunas.html">
+                    <div class="text-[#5324e0] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M224,128A96,96,0,0,1,62.11,197.82a8,8,0,1,1,11-11.64A80,80,0,1,0,71.43,71.43C67.9,75,64.58,78.51,61.35,82L77.66,98.34A8,8,0,0,1,72,112H32a8,8,0,0,1-8-8V64a8,8,0,0,1,13.66-5.66L50,70.7c3.22-3.49,6.54-7,10.06-10.55A96,96,0,0,1,224,128ZM128,72a8,8,0,0,0-8,8v48a8,8,0,0,0,3.88,6.86l40,24a8,8,0,1,0,8.24-13.72L136,123.47V80A8,8,0,0,0,128,72Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#110e1b] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
+                    <p class="text-[#5324e0] text-xs font-medium leading-normal tracking-[0.015em]">History</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_info.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_info.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Payment</p>
                 </a>
-                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#604e97]" href="pelanggan_profile.html">
-                    <div class="text-[#604e97] flex h-8 items-center justify-center">
+                <a class="flex flex-1 flex-col items-center justify-end gap-1 text-[#625095]" href="pelanggan_profile.html">
+                    <div class="text-[#625095] flex h-8 items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                             <path d="M230.92,212c-15.23-26.33-38.7-45.21-66.09-54.16a72,72,0,1,0-73.66,0C63.78,166.78,40.31,185.66,25.08,212a8,8,0,1,0,13.85,8c18.84-32.56,52.14-52,89.07-52s70.23,19.44,89.07,52a8,8,0,1,0,13.85-8ZM72,96a56,56,0,1,1,56,56A56.06,56.06,0,0,1,72,96Z"></path>
                         </svg>
                     </div>
-                    <p class="text-[#604e97] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
+                    <p class="text-[#625095] text-xs font-medium leading-normal tracking-[0.015em]">Profile</p>
                 </a>
             </div>
             <div class="h-5 bg-[#f9f8fc]"></div>
