--- a/pelanggan.html
+++ b/pelanggan.html
@@ -33,7 +33,7 @@
       <div class="flex-1 pb-24">
         
         <div id="list-view">
-            <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between border-none">
+            <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between border-none shadow-none">
               <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Pelanggan</h2>
             </header>
             
