--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -134,9 +134,9 @@
       </div>
     </div>
 
-    <script src="config.js"></script>
-    <script src="auth.js"></script>
-    <script src="pengeluaran.js"></script>
+    <script type="module" src="supabase-client.js"></script>
+    <script type="module" src="auth.js"></script>
+    <script type="module" src="pengeluaran.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
 </html>
