--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
           </div>
 
           <form id="login-form" class="space-y-6">
-            <!-- Username Input -->
+            <!-- Email Input -->
             <div class="space-y-2">
-              <label for="username" class="block text-sm font-medium text-white/90">Username</label>
+              <label for="username" class="block text-sm font-medium text-white/90">Email</label>
               <div class="relative">
                 <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                   <svg class="h-5 w-5 text-white/50" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -108,9 +108,9 @@
                   </svg>
                 </div>
                 <input
-                  id="username"
-                  type="text"
-                  placeholder="Masukkan username"
+                  id="email"
+                  type="email"
+                  placeholder="Masukkan email"
                   class="input-focus w-full pl-10 pr-4 py-3 bg-white/10 border border-white/20 rounded-xl text-white placeholder-white/50 focus:outline-none focus:ring-2 focus:ring-white/30 focus:border-transparent"
                   required
                 />
@@ -170,8 +170,8 @@
       </div>
     </div>
     
-    <script src="config.js"></script>
-    <script src="login.js"></script>
+    <script type="module" src="supabase-client.js"></script>
+    <script type="module" src="login.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
 </html>
