--- a/pelanggan_info.html
+++ b/pelanggan_info.html
@@ -6,7 +6,7 @@
     <title>Info Pembayaran - Selinggonet</title>
     
     <!-- PWA Meta Tags -->
-    <meta name="theme-color" content="#6a5acd">
+    <meta name="theme-color" content="#f9f8fc">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Selinggonet">
@@ -27,7 +27,7 @@
     <div class="relative flex size-full min-h-screen flex-col bg-[#f9f8fc] group/design-root overflow-x-hidden" style='font-family: Manrope, "Noto Sans", sans-serif;'>
         <div class="layout-container flex h-full grow flex-col">
             <!-- Header -->
-            <div class="flex items-center bg-[#f9f8fc] p-4 pb-2 justify-between">
+            <div class="flex items-center bg-[#f9f8fc] p-4 pb-2 justify-between border-none shadow-none">
                 <div class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer" data-icon="ArrowLeft" data-size="24px" data-weight="regular" onclick="window.location.href='pelanggan_dashboard.html'">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                         <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
@@ -199,10 +199,10 @@
         <span id="toast-message"></span>
     </div>
     
-    <script src="config.js"></script>
-    <script src="auth.js"></script>
+    <script type="module" src="supabase-client.js"></script>
+    <script type="module" src="auth.js"></script>
     <script src="logo-navigation.js"></script>
-    <script src="pelanggan_info.js"></script>
+    <script type="module" src="pelanggan_info.js"></script>
     <script src="pwa-installer.js"></script>
 </body>
 </html>
