--- a/pelanggan_riwayat_lunas.html
+++ b/pelanggan_riwayat_lunas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riwayat Lunas - Pelanggan</title>
     
-    <meta name="theme-color" content="#501ee6">
+    <meta name="theme-color" content="#f9f8fc">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Selinggonet">
@@ -22,7 +22,7 @@
     <div class="relative flex h-auto min-h-screen w-full flex-col bg-[#f9f8fc] justify-between group/design-root overflow-x-hidden" style='font-family: Manrope, "Noto Sans", sans-serif;'>
         <div>
             <!-- Header -->
-            <div class="flex items-center bg-[#f9f8fc] p-4 pb-2 justify-between">
+            <div class="flex items-center bg-[#f9f8fc] p-4 pb-2 justify-between border-none shadow-none">
                 <div class="text-[#110e1b] flex size-12 shrink-0 items-center cursor-pointer" onclick="window.history.back()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                         <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
@@ -34,10 +34,10 @@
             <!-- Tabs -->
             <div class="pb-3">
                 <div class="flex border-b border-[#d6d1e6] px-4 gap-8">
-                    <button id="paidTab" class="flex flex-col items-center justify-center border-b-[3px] border-b-[#5324e0] text-[#110e1b] pb-[13px] pt-4 tab-button active">
+                    <button id="paidTab" class="flex flex-1 flex-col items-center justify-center border-b-[3px] border-b-[#5324e0] text-[#110e1b] pb-[13px] pt-4 tab-button active">
                         <p class="text-sm font-bold leading-normal tracking-[0.015em]">Dibayar</p>
                     </button>
-                    <button id="unpaidTab" class="flex flex-col items-center justify-center border-b-[3px] border-b-transparent text-[#625095] pb-[13px] pt-4 tab-button">
+                    <button id="unpaidTab" class="flex flex-1 flex-col items-center justify-center border-b-[3px] border-b-transparent text-[#625095] pb-[13px] pt-4 tab-button">
                         <p class="text-sm font-bold leading-normal tracking-[0.015em]">Belum Dibayar</p>
                     </button>
                 </div>
@@ -102,9 +102,9 @@
         </footer>
     </div>
 
-    <script src="config.js"></script>
-    <script src="auth.js"></script>
-    <script src="pelanggan_riwayat_lunas.js"></script>
+    <script type="module" src="supabase-client.js"></script>
+    <script type="module" src="auth.js"></script>
+    <script type="module" src="pelanggan_riwayat_lunas.js"></script>
     
     <style>
         /* Tab Styles */
