--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pengeluaran - Selinggonet</title>
     
-    <meta name="theme-color" content="#501ee6">
+    <meta name="theme-color" content="#f9f8fb">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Selinggonet">
@@ -31,7 +31,7 @@
       style='font-family: Manrope, "Noto Sans", sans-serif;'
     >
       <div class="flex-1">
-        <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between">
+        <header class="flex items-center bg-[#f9f8fb] p-4 pb-2 justify-between border-none shadow-none">
           <h2 class="text-[#110e1b] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">Pengeluaran</h2>
         </header>
 
